# FMICodeGenerator

./: .gitignore  CONTRIBUTING.md  LICENSE  readme.md
data/: .gitignore
data/FMIProject/data/: modelDescription.xml
data/FMIProject/src/: FMIProject.cpp  FMIProject.h
data/FMI_template/: CMakeLists.txt  FMI_template.pro
data/FMI_template/data/: modelDescription.xml
data/FMI_template/src/: FMI_template.cpp  FMI_template.h
data/check/: .gitignore  RealInputTest.input  input.tsv  readme.md
doc/: concept.md  readme.md
doc/Tutorial/: readme.md  tutorial.md
examples/: P_Control.fmu  P_Control.input  P_Control_2inputs.input  Part3.fmu  Test5.fmu  TestWithOutputs.input  TestWithoutOutputs.input  readme.md
examples/Math003Part3/projects/cmake/: CMakeLists.txt
scripts/: .gitignore  FMIGenerator.py  FMIGenerator.wpr  FMIGeneratorWizard.py  FMIGenerator_rc.py  FMIGenerator_wing6.wpr  FMI_GUI.py  Ui_WizardPageBasicProperties.py  Ui_WizardPageGenerate.py  Ui_WizardPageVariables.py  WizardPageBasicProperties.py  WizardPageGenerate.py  WizardPageVariables.py  commandLineGenerator.py  generate.py  inputSchema.json  main.py
scripts/jsonimport/: JSONInputReader.py  inputSchema.json
scripts/test01/projects/cmake/: CMakeLists.txt
scripts/tests/: JSONInputReader.py  testCode.json
scripts/ui/: .gitignore  FMIGenerator.qrc  FMIGenerator_rc.py  Ui_WizardPageGenerate.py  Ui_WizardPageVariables.py  WizardPageBasicProperties.ui  WizardPageGenerate.ui  WizardPageVariables.ui  readme.md  update.sh
tests/: validInput.json
tests/WeatherSimC/: WeatherSim.json
(+70 files in other folders)
